--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <a href="/test/generation.html">Map generation</a>
+    <a href="/test/gameWorld.html">Game World</a>
   </body>
 </html>
