--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title></title>
   <link rel="stylesheet" href="./css/master.css">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <script src="/socket.io/socket.io.js"></script>
 </head>
 
