--- a/client/index.html
+++ b/client/index.html
@@ -5,11 +5,14 @@
   <meta charset="utf-8">
   <title></title>
   <link rel="stylesheet" href="./css/master.css">
+  <!-- disable standard pinch -->
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0', shrink-to-fit=no"> -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <script src="/socket.io/socket.io.js"></script>
 </head>
 
 <body>
+
   <canvas id="renderer"></canvas>
   <section id="screen">
 
