--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title></title>
   <link rel="stylesheet" href="./css/master.css">
+    <link rel="stylesheet" href="./css/gameInterface/ceilMenu.css">
   <!-- disable standard pinch -->
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0', shrink-to-fit=no"> -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -17,7 +18,11 @@
   <section id="screen">
 
   </section>
-  <!-- <canvas id="renderer"></canvas> -->
+  <section id="gameInterface">
+    <div id="sectorMenu">
+
+    </div>
+  </section>
 
 </body>
 <script>
