--- a/client/index.html
+++ b/client/index.html
@@ -19,9 +19,23 @@
 
   </section>
   <section id="gameInterface">
-    <div id="sectorMenu">
+    <section id="onCeilDoubleClick">
+      <div id="sectorMenu">
+      </div>
+      <div id="buildingMenu">
+        <h1 id="buildName">Build name</h1>
+        <p id="buildDescription">Building description</p>
 
-    </div>
+        <div style="display:flex;justify-content: space-around">
+          <div class="buildingMenu_button" id='cancelBuild'>
+            <img class="sectorMenuButton_image" src="./scripts/modules/interface/game/ceilMenu/icons/cancel.png">
+          </div>
+          <div class="buildingMenu_button" id='aceptBuild'>
+            <img class="sectorMenuButton_image" src="./scripts/modules/interface/game/ceilMenu/icons/build.png">
+          </div>
+        </div>
+      </div>
+    </section>
   </section>
 
 </body>
@@ -83,7 +97,11 @@
         const data = {
           login:generateId('p',5)
         };
+        MAIN.userData = {
+          login:data.login,
+        };
         MAIN.socket.emit('auth',data);
+
         /*ДЛЯ ОДНОГО ИГРОКА*/
 
 
