--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,11 @@
   <title></title>
   <link rel="stylesheet" href="./css/master.css">
     <link rel="stylesheet" href="./css/gameInterface/ceilMenu.css">
+    <link rel="stylesheet" href="./css/gameInterface/balance.css">
+
+    <link rel="stylesheet" href="./css/creditMenu/creditMenu.css">
+
+
   <!-- disable standard pinch -->
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0', shrink-to-fit=no"> -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -17,25 +22,6 @@
   <canvas id="renderer"></canvas>
   <section id="screen">
 
-  </section>
-  <section id="gameInterface">
-    <section id="onCeilDoubleClick">
-      <div id="sectorMenu">
-      </div>
-      <div id="buildingMenu">
-        <h1 id="buildName">Build name</h1>
-        <p id="buildDescription">Building description</p>
-
-        <div style="display:flex;justify-content: space-around">
-          <div class="buildingMenu_button" id='cancelBuild'>
-            <img class="sectorMenuButton_image" src="./scripts/modules/interface/game/ceilMenu/icons/cancel.png">
-          </div>
-          <div class="buildingMenu_button" id='aceptBuild'>
-            <img class="sectorMenuButton_image" src="./scripts/modules/interface/game/ceilMenu/icons/build.png">
-          </div>
-        </div>
-      </div>
-    </section>
   </section>
 
 </body>
