--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="./css/master.css">
     <link rel="stylesheet" href="./css/gameInterface/ceilMenu.css">
     <link rel="stylesheet" href="./css/gameInterface/balance.css">
+    <link rel="stylesheet" href="./css/gameInterface/turn.css">
+
 
     <link rel="stylesheet" href="./css/creditMenu/creditMenu.css">
 
