--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/gameInterface/balance.css">
     <link rel="stylesheet" href="./css/gameInterface/turn.css">
 
+    <link rel="stylesheet" href="./css/gameInterface/factory.css">
 
     <link rel="stylesheet" href="./css/creditMenu/creditMenu.css">
 
