--- a/client/scripts/modules/interface/game/factory/factory.html
+++ b/client/scripts/modules/interface/game/factory/factory.html
@@ -44,6 +44,7 @@
                     <div id="factoryMenu_Card_Storage_Ceil_2" class="factoryMenu_Card_Ceil factoryMenu_Card_Empty"></div>
                 </div>
             </div>
+            <div id="factoryMenu_Card_TEST"></div>
         </div>
         <div id="factoryMenu_ActionButton"></div>
     </div>
