--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./css/gameInterface/turn.css">
 
     <link rel="stylesheet" href="./css/gameInterface/factory.css">
+    <link rel="stylesheet" href="./css/gameInterface/trucksMenu.css">
+
 
     <link rel="stylesheet" href="./css/creditMenu/creditMenu.css">
 
