pathMarkers and innterface

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,8 @@
 
     <link rel="stylesheet" href="./css/gameInterface/factory.css">
     <link rel="stylesheet" href="./css/gameInterface/trucksMenu.css">
-
+    <link rel="stylesheet" href="./css/gameInterface/path.css">
+    <link rel="stylesheet" href="./css/gameInterface/gameNotifications.css">
 
     <link rel="stylesheet" href="./css/creditMenu/creditMenu.css">
 
