--- a/client/index.html
+++ b/client/index.html
@@ -17,10 +17,22 @@
     <link rel="stylesheet" href="./css/creditMenu/creditMenu.css">
 
 
+
+    <link rel="stylesheet" href="./css/gameInterface/city.css">
+    <link rel="stylesheet" href="./css/gameInterface/card.css">
+    <link rel="stylesheet" href="./css/gameInterface/resource.css">
+
+
+
+
+
   <!-- disable standard pinch -->
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0', shrink-to-fit=no"> -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <script src="/socket.io/socket.io.js"></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap');
+  </style>
 </head>
 
 <body>
