--- a/client/scripts/modules/interface/game/truck/truckMenu.html
+++ b/client/scripts/modules/interface/game/truck/truckMenu.html
@@ -6,51 +6,68 @@
     <link rel="stylesheet" href="../../../../../../css/gameInterface/trucksMenu.css">
     <link rel="stylesheet" href="../../../../../../css/master.css">
 
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/card.css">
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/resource.css">
+
   </head>
   <body>
     <section id="trucksMenuSection">
       <div id="trucksMenuContainer">
-        <div id="trucksMenuContainer_title">TRUCKS</div>
         <div id="trucksMenuList">
 
-          <div class="truckMenu_card">
-            <div class="truckMenu_card_inner">
-              <div id="truckMenu_card_count">
-                <span style="margin:auto">20</span>
-              </div>
-              <div id="truckMenu_card_buyButton">
-                <span style="margin:auto">Buy</span>
-              </div>
-              <div id="truckMenu_card_price">
-                $200
-              </div>
+
+
+          <!-- BUY CARD  -->
+          <div class="card trucksMenu-card">
+            <div class="card-header">
+              TRUCK <span class="card-header-span"> | 20</span>
+            </div>
+
+            <div class="trucksMenu-card-price">
+              $500
+            </div>
+
+            <div class="trucksMenu-card-button">
+              <span class="trucksMenu-card-button-span">buy<span>
             </div>
           </div>
+          <!-- ///BUY CARD  -->
 
-          <div class="truckMenu_card">
-            <div class="truckMenu_card_inner">
-              <div class="truckMenu_card_image">
 
-              </div>
+          <div class="card trucksMenu-card">
+            <div class="card-header">
+              TRUCK <span class="card-header-span"> | 20</span>
+            </div>
 
-              <div class="truckMenu_card_resource truckMenu_card_resource_hole">
-                <div id="truckMenu_card_status_id"></div>
-              </div>
 
-              <div class="truckMenu_card_button">
-                <span style="margin:auto" id="truckMenu_card_button_id">send</span>
-              </div>
+            <!-- if epty -->
+            <div class="trucksMenu-card-resource resource-hole">
 
             </div>
-          </div>
+            <!-- //if epty -->
 
+
+            <!-- if loaded -->
+            <div class="trucksMenu-card-resource resource-gag resource-bg-color-wood">
+              <div class="resource-gag-title">
+                wood
+              </div>
+              <div class="resource-gag-quality">
+                Q3
+              </div>
+
+
+            </div>
+            <!-- //if loaded -->
+
+            <div class="trucksMenu-card-button">
+              <span class="trucksMenu-card-button-span">load<span>
+            </div>
+          </div>
 
 
         </div>
       </div>
-
-
-      <div id="truckCard"></div>
     </section>
   </body>
 </html>
