--- a/client/index.html
+++ b/client/index.html
@@ -4,23 +4,24 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <link rel="stylesheet" href="./css/master.css">
+    <link rel="stylesheet" href="./css/master.css">
+    <link rel="stylesheet" href="./css/rooms/rooms.css">
+
+
+
     <link rel="stylesheet" href="./css/gameInterface/ceilMenu.css">
     <link rel="stylesheet" href="./css/gameInterface/balance.css">
     <link rel="stylesheet" href="./css/gameInterface/turn.css">
-
     <link rel="stylesheet" href="./css/gameInterface/factory.css">
     <link rel="stylesheet" href="./css/gameInterface/trucksMenu.css">
     <link rel="stylesheet" href="./css/gameInterface/path.css">
     <link rel="stylesheet" href="./css/gameInterface/gameNotifications.css">
-
-    <link rel="stylesheet" href="./css/creditMenu/creditMenu.css">
-
-
-
+    <link rel="stylesheet" href="./css/gameInterface/creditMenu.css">
     <link rel="stylesheet" href="./css/gameInterface/city.css">
     <link rel="stylesheet" href="./css/gameInterface/card.css">
     <link rel="stylesheet" href="./css/gameInterface/resource.css">
+
+
 
 
 
@@ -107,10 +108,6 @@
         // MAIN.socket.emit('auth',data);
 
         /*ДЛЯ ОДНОГО ИГРОКА*/
-
-
-
-
 
       }else{
         console.log('Socket error');
