--- a/client/scripts/modules/interface/game/factory/factory.html
+++ b/client/scripts/modules/interface/game/factory/factory.html
@@ -4,47 +4,101 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="../../../../../../css/gameInterface/factory.css">
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/resource.css">
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/card.css">
+
     <link rel="stylesheet" href="../../../../../../css/master.css">
 
   </head>
   <body>
     <div id="factoryMenu_Section">
-        <div id="factoryMenu_Card">
-            <div id="factoryMenu_Card_Title">Water factory</div>
-            <div id="factoryMenu_Card_ProgressLine">
-                <div id="factoryMenu_Card_ProgressLine_Title">
-                  Progress
-                </div>
-                <div id="factoryMenu_Card_ProgressLine_Container">
-                  <div id="factoryMenu_Card_ProgressLine_Ceil_0" class="factoryMenu_Card_Ceil  factoryMenu_Card_Gag factoryMenu_Card_Full_1">
-                      <div class="factoryMenu_Card_Full_Image factoryMenu_Card_Ceil_wood"></div>
-                  </div>
-                      <div id="factoryMenu_Card_ProgressLine_Ceil_1" class="factoryMenu_Card_Ceil factoryMenu_Card_Empty"></div>
-                      <div id="factoryMenu_Card_ProgressLine_Ceil_2" class="factoryMenu_Card_Ceil factoryMenu_Card_Empty"></div>
-                      <div id="factoryMenu_Card_ProgressLine_Ceil_3" class="factoryMenu_Card_Ceil factoryMenu_Card_Empty"></div>
-                      <div id="factoryMenu_Card_ProgressLine_Ceil_4" class="factoryMenu_Card_Ceil factoryMenu_Card_Empty"></div>
-                      <div id="factoryMenu_Card_ProgressLine_Ceil_5" class="factoryMenu_Card_Ceil factoryMenu_Card_Empty"></div>
-                      <div id="factoryMenu_Card_ProgressLine_Ceil_6" class="factoryMenu_Card_Ceil factoryMenu_Card_Gag"></div>
-                      <div id="factoryMenu_Card_ProgressLine_Ceil_7" class="factoryMenu_Card_Ceil factoryMenu_Card_Gag"></div>
-                      <div id="factoryMenu_Card_ProgressLine_Ceil_8" class="factoryMenu_Card_Ceil factoryMenu_Card_Gag"></div>
-                </div>
-                <div id="factoryMenu_Card_ProgressLine_Price">
-                  $250 per step
-                </div>
+        <div id="factoryMenu_Card" class="card">
+          <div class="card-header">
+              SAWMILL <span class="card-header-span"> | 10</span>
+          </div>
+          <div id="factoryMenu_Card_Top">
+            <div class="factoryMenu_Card_Titles">
+              PRODUCTION
             </div>
+            <div id="factoryMenu_Card_ProductionPart_Container">
+              <div class="resource-hole">
+
+              </div>
+              <div class="resource-gag resource-bg-color-wood">
+                <div class="resource-gag-title">
+                  wood
+                </div>
+                <div class="resource-gag-quality">
+                  Q3
+                </div>
 
 
-            <div id="factoryMenu_Card_StorageLine">
-                <div id="factoryMenu_Card_StorageLine_Title">
-                  Storage
-                </div>
-                <div id="factoryMenu_Card_StorageLine_Container">
-                    <div id="factoryMenu_Card_Storage_Ceil_0" class="factoryMenu_Card_Ceil factoryMenu_Card_Empty"></div>
-                    <div id="factoryMenu_Card_Storage_Ceil_1" class="factoryMenu_Card_Ceil factoryMenu_Card_Empty"></div>
-                    <div id="factoryMenu_Card_Storage_Ceil_2" class="factoryMenu_Card_Ceil factoryMenu_Card_Empty"></div>
-                </div>
+              </div>
+              <div class="resource-hole">
+
+              </div>
+              <div class="resource-hole">
+
+              </div>
+              <div class="resource-hole">
+
+              </div>
+              <div class="resource-hole">
+
+              </div>
+              <div class="resource-hole">
+
+              </div>
+              <div class="resource-gag">
+
+              </div>
+
+
             </div>
-            <div id="factoryMenu_Card_TEST"></div>
+          </div>
+          <div id="factoryMenu_Card_Bottom">
+            <div id="factoryMenu_Card_ResourseLogo" class="resource-bg-color-wood">
+              <div class="factoryMenu_Card_ResourseLogo-title">
+                wood
+              </div>
+              <div class="factoryMenu_Card_ResourseLogo-qualityContainer">
+                <span class="factoryMenu_Card_ResourseLogo-qualityContainer-q">Q</span>
+                <div class="quality-gag">
+
+                </div>
+                <div class="quality-hole">
+
+                </div>
+                <div class="quality-hole">
+
+                </div>
+              </div>
+
+            </div>
+            <div id="factoryMenu_Card_StoragePart">
+              <div class="factoryMenu_Card_Titles factoryMenu_Card_StoragePart-title">
+                STORAGE
+              </div>
+              <div class="factoryMenu_Card_StoragePart-storageContainer">
+                <div class="resource-hole">
+
+                </div>
+                <div class="resource-hole">
+
+                </div>
+                <div class="resource-gag">
+
+                </div>
+                <div class="resource-gag">
+
+                </div>
+                <div class="resource-gag">
+
+                </div>
+              </div>
+
+            </div>
+          </div>
         </div>
         <div id="factoryMenu_ActionButton"></div>
     </div>
