--- a/client/scripts/modules/interface/game/factory/factory.html
+++ b/client/scripts/modules/interface/game/factory/factory.html
@@ -11,7 +11,7 @@
 
   </head>
   <body>
-    <div id="factoryMenu_Section">
+    <!-- <div id="factoryMenu_Section">
         <div id="factoryMenu_Card" class="card">
           <div class="card-header">
               SAWMILL <span class="card-header-span"> | 10</span>
@@ -101,6 +101,141 @@
           </div>
         </div>
         <div id="factoryMenu_ActionButton"></div>
+    </div> -->
+
+
+    <!-- <div id='factoryMenu_Container' class="factoryMenu_cardBackground_${factory.type}" >
+      <div id="factoryMenu_title">${name}</div>
+      <div id='factoryMenu_settings_points'>3</div>
+      <div class="factoryMenu_settingsLine">
+        <div class="factoryMenu_settings_title">speed</div>
+        <div class="factoryMenu_settings_container">
+          <div id="factoryMenu_settings_speed_minus" class="factoryMenu_settings_button">-</div>
+          <div class="factoryMenu_settings_progress">
+            <div id="factoryMenu_settings_speed_progress" class="factoryMenu_settings_progressBar"></div>
+          </div>
+          <div id="factoryMenu_settings_speed_plus" class="factoryMenu_settings_button">+</div>
+
+        </div>
+      </div>
+      <div class="factoryMenu_settingsLine">
+        <div class="factoryMenu_settings_title">quality</div>
+        <div class="factoryMenu_settings_container">
+          <div id="factoryMenu_settings_quality_minus" class="factoryMenu_settings_button">-</div>
+          <div class="factoryMenu_settings_progress">
+            <div id="factoryMenu_settings_quality_progress" class="factoryMenu_settings_progressBar"></div>
+          </div>
+          <div id="factoryMenu_settings_quality_plus" class="factoryMenu_settings_button">+</div>
+        </div>
+      </div>
+      <div class="factoryMenu_settingsLine">
+        <div class="factoryMenu_settings_title">low salary</div>
+        <div class="factoryMenu_settings_container">
+          <div id="factoryMenu_settings_salary_minus" class="factoryMenu_settings_button">-</div>
+          <div class="factoryMenu_settings_progress">
+            <div id="factoryMenu_settings_salary_progress" class="factoryMenu_settings_progressBar"></div>
+          </div>
+          <div id="factoryMenu_settings_salary_plus" class="factoryMenu_settings_button">+</div>
+        </div>
+      </div>
+      <div class="factoryMenu_settingsLine">
+        <div class="factoryMenu_settings_title">storage</div>
+        <div class="factoryMenu_settings_container">
+          <div id="factoryMenu_settings_storage_minus" class="factoryMenu_settings_button">-</div>
+          <div class="factoryMenu_settings_progress">
+            <div id="factoryMenu_settings_storage_progress" class="factoryMenu_settings_progressBar"></div>
+          </div>
+          <div id="factoryMenu_settings_storage_plus" class="factoryMenu_settings_button">+</div>
+        </div>
+      </div>
+      </div>
+    </div>
+    <div id="factoryMenu_Button">
+
+      <span style="margin:auto">OK</span>
+
+    </div> -->
+
+    <div id="factoryMenu_Settings_Container">
+      <div class="card" id="factoryMenu_SettingsCard">
+        <div class="card-header">
+            ${name} <span class="card-header-span"> | ${factory.number}</span>
+        </div>
+        <div id="factoryMenu_SettingsCard_Top">
+          <div class="factoryMenu_SettingsCard_Top-resourceLogo resource-bg-color-${factory.product}">
+            <!-- <span>${factory.product}</span> -->
+            <span>water</span>
+
+          </div>
+          <div id="factoryMenu_SettingsCard_Top-pointsCounter">
+            <!-- <span style="margin:auto">0<span id="factoryMenu_settings_points">${settings.points}</span></span> -->
+            <span style="margin:auto">0<span id="factoryMenu_settings_points">4</span></span>
+
+          </div>
+        </div>
+
+        <div id="factoryMenu_SettingsCard_Middle">
+          <div class="factoryMenu_SettingsCard_SettingsString">
+            <div class="factoryMenu_SettingsCard_SettingsString-title">
+              speed
+            </div>
+            <div class="factoryMenu_SettingsCard_SettingsString-SettingContainer">
+              <div id="factoryMenu_settings_speed_minus" class="factoryMenu_SettingsCard_SettingsString-button">-</div>
+              <div class="factoryMenu_SettingsCard_SettingsString-progressBar">
+                <div id="factoryMenu_settings_speed_progress" class="factoryMenu_SettingsCard_SettingsString-progress">
+                </div>
+              </div>
+              <div id="factoryMenu_settings_speed_plus" class="factoryMenu_SettingsCard_SettingsString-button">+</div>
+            </div>
+          </div>
+
+          <div class="factoryMenu_SettingsCard_SettingsString">
+            <div class="factoryMenu_SettingsCard_SettingsString-title">
+              quality
+            </div>
+            <div class="factoryMenu_SettingsCard_SettingsString-SettingContainer">
+              <div id="factoryMenu_settings_quality_minus" class="factoryMenu_SettingsCard_SettingsString-button">-</div>
+              <div class="factoryMenu_SettingsCard_SettingsString-progressBar">
+                <div id="factoryMenu_settings_quality_progress" class="factoryMenu_SettingsCard_SettingsString-progress">
+                </div>
+              </div>
+              <div id="factoryMenu_settings_quality_plus" class="factoryMenu_SettingsCard_SettingsString-button">+</div>
+            </div>
+          </div>
+
+          <div class="factoryMenu_SettingsCard_SettingsString">
+            <div class="factoryMenu_SettingsCard_SettingsString-title">
+              low salary
+            </div>
+            <div class="factoryMenu_SettingsCard_SettingsString-SettingContainer">
+              <div id="factoryMenu_settings_salary_minus" class="factoryMenu_SettingsCard_SettingsString-button">-</div>
+              <div class="factoryMenu_SettingsCard_SettingsString-progressBar">
+                <div id="factoryMenu_settings_salary_progress" class="factoryMenu_SettingsCard_SettingsString-progress">
+                </div>
+              </div>
+              <div id="factoryMenu_settings_salary_plus" class="factoryMenu_SettingsCard_SettingsString-button">+</div>
+            </div>
+          </div>
+
+          <div class="factoryMenu_SettingsCard_SettingsString">
+            <div class="factoryMenu_SettingsCard_SettingsString-title">
+              storage
+            </div>
+            <div class="factoryMenu_SettingsCard_SettingsString-SettingContainer">
+              <div id="factoryMenu_settings_storage_minus" class="factoryMenu_SettingsCard_SettingsString-button">-</div>
+              <div class="factoryMenu_SettingsCard_SettingsString-progressBar">
+                <div id="factoryMenu_settings_storage_progress" class="factoryMenu_SettingsCard_SettingsString-progress">
+                </div>
+              </div>
+              <div id="factoryMenu_settings_storage_plus" class="factoryMenu_SettingsCard_SettingsString-button">+</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="factoryMenu_SettingsCard_Bottom" id="factoryMenu_Button">
+          <span style="margin:auto">APPLY</span>
+        </div>
+      </div>
     </div>
 
 
