credit menu and ru

--- a/client/scripts/modules/interface/game/credit/credit.html
+++ b/client/scripts/modules/interface/game/credit/credit.html
@@ -3,29 +3,59 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="../../../../../../css/creditMenu/creditMenu.css">
     <link rel="stylesheet" href="../../../../../../css/master.css">
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/ceilMenu.css">
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/balance.css">
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/turn.css">
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/factory.css">
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/trucksMenu.css">
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/path.css">
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/gameNotifications.css">
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/creditMenu.css">
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/city.css">
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/card.css">
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/resource.css">
 
   </head>
   <body>
     <section id="chooseCreditMenuSection">
       <div id="chooseCreditMenuContainer">
-        <div id="chooseCreditMenuSection_title">
-          Choose your credit
+        <div class="CreditMenu_Title">
+          Выберите ваш кредит
         </div>
-        <div id="creditCardsContainer">
-          <!-- Credit card -->
-            <div class="creditCard">
-              <div class="creditCard_title">$100000</div>
-              <div class="creditCard_line ">Interest Rate: 25%</div>
-              <div class="creditCard_line">Loan Term: 10</div>
-              <div class="creditCard_line">Loan Deferral: 10</div>
+        <div class="CreditMenu_List">
+          <div class="CreditMenu_Card card choosenCredit">
+            <div class="card-header">
+                credit <span class="card-header-span"> | basic </span>
             </div>
-          <!-- Credit card -->
+
+            <div class="CreditMenu_Card_title creditColor-basic">
+              basic
+            </div>
+
+            <div class="CreditMenu_Card_amount">
+              $<span>120000</span>
+            </div>
+
+            <div class="CreditMenu_Card_line">
+              Процент: <span class="CreditMenu_Card_line-span">12</span>
+            </div>
+            <div class="CreditMenu_Card_line">
+              Платежи: <span class="CreditMenu_Card_line-span">25</span>
+            </div>
+            <div class="CreditMenu_Card_line">
+              Отсрочка: <span class="CreditMenu_Card_line-span">15</span>
+            </div>
+
+
+          </div>
+
+
+
         </div>
-        <div id="chooseCreditMenuSection_footer">
-          Accept
-        <div>
+        <div id="CreditMenu_Button">
+          <span style="margin:auto">Начать!</span>
+        </div>
       </div>
     </section>
 
