truck menu button

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,9 @@
 
 
 
+    <link rel="stylesheet" href="./css/gameInterface/gameScreen.css">
+    <link rel="stylesheet" href="./css/gameInterface/icons.css">
+
     <link rel="stylesheet" href="./css/gameInterface/ceilMenu.css">
     <link rel="stylesheet" href="./css/gameInterface/balance.css">
     <link rel="stylesheet" href="./css/gameInterface/turn.css">
