--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,8 @@
 
     <link rel="stylesheet" href="./css/gameInterface/icons.css">
 
+    <link rel="stylesheet" href="./css/gameInterface/product.css">
+
     <link rel="stylesheet" href="./css/gameInterface/ceilMenu.css">
     <link rel="stylesheet" href="./css/gameInterface/balance.css">
     <link rel="stylesheet" href="./css/gameInterface/turn.css">
