factory card + truck sending

--- a/client/scripts/modules/interface/game/factory/factory.html
+++ b/client/scripts/modules/interface/game/factory/factory.html
@@ -162,7 +162,7 @@
      <div id="factoryMenuClicker">
        <div id="factoryMenu">
 
-
+         <!-- factory card -->
          <div class="factory_card">
            <div class="factory_header factory_header_bg-oilWell">
              <div class="factory_header_header">
@@ -243,7 +243,7 @@
 
                 <!-- central part -->
                <div class="factory_body_body-production">
-                 <div class="factory_body_ingredientList">
+                 <!-- <div class="factory_body_ingredientList">
 
                    <div class="factory_body_ingredientList-item">
                      <div class="factory_body_ingredientList-icon product-oil"></div>
@@ -345,17 +345,58 @@
 
 
 
+                 </div> -->
+
+                 <div class="factory_body_body-production-left">
+                   <div class="factory_body_productHugeIcon product-wood"></div>
                  </div>
 
 
-                 <div class="factory_body_body-production-right">
 
+
+
+                 <div class="factory_body_body-production-right">
+                   <div class="factory_body_body-production_settings-list">
+                     <div class="factory_body_body-production_settings-text">ls</div>
+                     <div class="factory_body_body-production_settings-gap"></div>
+                     <div class="factory_body_body-production_settings-hole"></div>
+                     <div class="factory_body_body-production_settings-hole"></div>
+
+                   </div>
+                   <div class="factory_body_body-production_settings-list">
+                     <div class="factory_body_body-production_settings-text">v</div>
+                     <div class="factory_body_body-production_settings-gap"></div>
+                     <div class="factory_body_body-production_settings-hole"></div>
+                     <div class="factory_body_body-production_settings-hole"></div>
+                   </div>
+                   <div class="factory_body_body-production_settings-list">
+                     <div class="factory_body_body-production_settings-text">s</div>
+                     <div class="factory_body_body-production_settings-gap"></div>
+                     <div class="factory_body_body-production_settings-hole"></div>
+                     <div class="factory_body_body-production_settings-hole"></div>
+                   </div>
                  </div>
                </div>
                <!-- /central part -->
 
 
                <div class="factory_body_storage">
+                 <div class="factory_product-gap">
+                   <div class="product-icon product-petrol"></div>
+                   <div class="product-qualityContainer">
+                     <span class="product-quality"></span>
+                     <span class="product-quality"></span>
+                     <span class="product-quality"></span>
+                   </div>
+                 </div>
+
+                 <div class="factory_product-hole"></div>
+
+                 <div class="factory_product-hole"></div>
+
+                 <div class="factory_storage-gap"></div>
+
+                 <div class="factory_storage-gap"></div>
 
                </div>
              </div>
@@ -379,8 +420,16 @@
            </div>
          </div>
 
+         <!-- /factory card -->
+
+         <div id="factory_card_error">
+           <div class='factory_card_error_icon'>!</div>
+           <div class='factory_card_error_text'>дорога около фабрики занята</div>
+         </div>
+
 
        </div>
+
      </div>
    </section>
  </body>
