autosend onn cards

--- a/client/scripts/modules/interface/game/factory/factory.html
+++ b/client/scripts/modules/interface/game/factory/factory.html
@@ -417,6 +417,57 @@
              <div class="factory_footer_header">
                <span>автоотправка</span>
              </div>
+             <div class="factory_footer_body">
+
+               <div class="factory_footer_body_line">
+                 <div class="factory_footer_body_line-icon  product-petrol">
+                 </div>
+                 <div class="factory_footer_body_line_buttonsContainer">
+                   <div class="factory_footer_body_line_buttonsContainer-button">
+                     <div class="factory_footer_body_line_buttonsContainer-icon icon-bestPrice">
+                     </div>
+                   </div>
+                   <div class="factory_footer_body_line_buttonsContainer-button">
+                     <div class="factory_footer_body_line_buttonsContainer-icon icon-findRoute">
+                     </div>
+                   </div>
+                 </div>
+               </div>
+
+
+               <div class="factory_footer_body_line">
+                 <div class="factory_footer_body_line-icon  product-sand">
+                 </div>
+                 <div class="factory_footer_body_line-body">
+                   <div class="factory_footer_body_line-iconMode icon-bestPrice">
+
+                   </div>
+                 </div>
+                 <div class="factory_footer_body_line-cancelButton">
+                   ✖
+                 </div>
+               </div>
+
+
+
+               <div class="factory_footer_body_line">
+                 <div class="factory_footer_body_line-icon  product-water">
+                 </div>
+                 <div class="factory_footer_body_line-body">
+                   <div class="factory_footer_body_line-iconMode icon-findRoute">
+                   </div>
+                   <div class="factory_footer_body_line-direction">
+                     Westown
+                   </div>
+                 </div>
+                 <div class="factory_footer_body_line-cancelButton">
+                   ✖
+                 </div>
+               </div>
+
+
+
+             </div>
            </div>
          </div>
 
