factory pause and reSet

--- a/client/scripts/modules/interface/game/factory/factory.html
+++ b/client/scripts/modules/interface/game/factory/factory.html
@@ -166,7 +166,15 @@
          <div class="factory_card">
            <div class="factory_header factory_header_bg-oilWell">
              <div class="factory_header_header">
-               oil well <span class="factory_header_header-span">| 10</span>
+               <span>oil well <span class="factory_header_header-span">| 10</span></span>
+               <div class="factory_header_header-buttonsContainer">
+                 <div class="factory_header_header-button icon-settings">
+
+                 </div>
+                 <div class="factory_header_header-button icon-pause">
+
+                 </div>
+               </div>
              </div>
            </div>
 
