factory autosending css html

--- a/client/scripts/modules/interface/game/factory/factory.html
+++ b/client/scripts/modules/interface/game/factory/factory.html
@@ -421,57 +421,70 @@
            </div>
 
 
-           <div class="factory_footer">
+           <div class="factory_footer" style="top:-79%">
              <div class="factory_footer_header">
                <span>автоотправка</span>
              </div>
              <div class="factory_footer_body">
 
-               <div class="factory_footer_body_line">
-                 <div class="factory_footer_body_line-icon  product-petrol">
-                 </div>
-                 <div class="factory_footer_body_line_buttonsContainer">
-                   <div class="factory_footer_body_line_buttonsContainer-button">
-                     <div class="factory_footer_body_line_buttonsContainer-icon icon-bestPrice">
+              <!-- item -->
+               <div class="factory_footer_body_item">
+                 <div class="factory_footer_body_item-header">
+                   <div class="factory_footer_body_item-header_icon product-sand"></div>
+
+                   <div class="factory_footer_body_item-header_buttonsContainer">
+                     <div class="factory_footer_body_item-header_buttonsContainer-icon icon-plus">
+                     </div>
+                     <div class="factory_footer_body_item-header_buttonsContainer-button">
+                      <div class="factory_footer_body_item-header_buttonsContainer-button-icon icon-bestPrice">
+
+                      </div>
+                     </div>
+                     <div class="factory_footer_body_item-header_buttonsContainer-button">
+                       <div class="factory_footer_body_item-header_buttonsContainer-button-icon icon-findRoute">
+
+                       </div>
                      </div>
                    </div>
-                   <div class="factory_footer_body_line_buttonsContainer-button">
-                     <div class="factory_footer_body_line_buttonsContainer-icon icon-findRoute">
+
+                   <div class="factory_footer_body_item-header_icon icon-list"></div>
+                 </div>
+
+
+                 <div class="factory_footer_body_item_directionsList">
+                   <div class="factory_footer_body_item_directionsList_item ">
+                     <div class="factory_footer_body_item_directionsList_item-icon icon-findRoute">
+
+                     </div>
+
+                     <div class="factory_footer_body_item_directionsList_item-text">
+                       Westown
+                     </div>
+
+
+                     <div class="factory_footer_body_item_directionsList_item-icon icon-cancel">
+
                      </div>
                    </div>
-                 </div>
-               </div>
 
+                   <div class="factory_footer_body_item_directionsList_item factory_footer_body_item_directionsList_item-current">
+                     <div class="factory_footer_body_item_directionsList_item-icon icon-bestPrice">
 
-               <div class="factory_footer_body_line">
-                 <div class="factory_footer_body_line-icon  product-sand">
-                 </div>
-                 <div class="factory_footer_body_line-body">
-                   <div class="factory_footer_body_line-iconMode icon-bestPrice">
+                     </div>
 
+                     <div class="factory_footer_body_item_directionsList_item-icon icon-cancel">
+
+                     </div>
                    </div>
+
+
+
+
+
                  </div>
-                 <div class="factory_footer_body_line-cancelButton">
-                   ✖
-                 </div>
+
                </div>
-
-
-
-               <div class="factory_footer_body_line">
-                 <div class="factory_footer_body_line-icon  product-water">
-                 </div>
-                 <div class="factory_footer_body_line-body">
-                   <div class="factory_footer_body_line-iconMode icon-findRoute">
-                   </div>
-                   <div class="factory_footer_body_line-direction">
-                     Westown
-                   </div>
-                 </div>
-                 <div class="factory_footer_body_line-cancelButton">
-                   ✖
-                 </div>
-               </div>
+               <!-- /item -->
 
 
 
