new autosending ui

--- a/client/scripts/modules/interface/game/factory/factory.html
+++ b/client/scripts/modules/interface/game/factory/factory.html
@@ -450,7 +450,7 @@
                    <div class="factory_footer_body_item-header_icon icon-list"></div>
                  </div>
 
-
+                 <!-- direction list -->
                  <div class="factory_footer_body_item_directionsList">
                    <div class="factory_footer_body_item_directionsList_item ">
                      <div class="factory_footer_body_item_directionsList_item-icon icon-findRoute">
@@ -476,12 +476,8 @@
 
                      </div>
                    </div>
-
-
-
-
-
                  </div>
+                 <!-- direction list -->
 
                </div>
                <!-- /item -->
